# railspan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/railspan-agent/: Cargo.toml
crates/railspan-agent/src/: lib.rs
crates/railspan-cli/: Cargo.toml
crates/railspan-cli/src/: main.rs
crates/railspan-protocol/: Cargo.toml
crates/railspan-protocol/src/: lib.rs
crates/railspan-server/: Cargo.toml
crates/railspan-server/src/: lib.rs  store.rs
crates/railspan-server/static/: index.html
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DATA_MODEL.md  PLAN.md  PRODUCT.md  PROTOCOL.md  ROADMAP.md  USER_GUIDE.md
docs/adrs/: 0000-template.md  0001-project-decisions.md
docs/diagrams/: README.md
examples/dummy_rails/: Dockerfile  Gemfile  README.md
examples/dummy_rails/app/controllers/: users_controller.rb
examples/dummy_rails/config/: application.rb  credentials.yml.enc  routes.rb
examples/dummy_rails/config/initializers/: railspan.rb
examples/dummy_rails/db/: schema.rb  seeds.rb
examples/dummy_rails/db/migrate/: 20260710000001_create_users_and_posts.rb
gem/railspan/: LICENSE.txt  README.md  railspan.gemspec
gem/railspan/lib/: railspan.rb
gem/railspan/lib/railspan/: configuration.rb  context.rb  railtie.rb  scrubber.rb  span.rb  sql_normalizer.rb  tracer.rb  version.rb
gem/railspan/lib/railspan/exporters/: http.rb  stdout.rb
gem/railspan/lib/railspan/instrumentation/: action_controller.rb  action_view.rb  active_job.rb  active_record.rb  cache.rb  net_http.rb  sidekiq.rb
gem/railspan/lib/railspan/middleware/: rack.rb
gem/railspan/test/: configuration_test.rb  context_test.rb  rack_middleware_test.rb  scrubber_test.rb  sql_normalizer_test.rb  test_helper.rb
