[workspace]
resolver = "2"
members = [
    "crates/railspan-protocol",
    "crates/railspan-agent",
    "crates/railspan-server",
    "crates/railspan-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Saidbek/railspan"
authors = ["Saidbek"]

[workspace.dependencies]
railspan-protocol = { path = "crates/railspan-protocol" }
railspan-agent = { path = "crates/railspan-agent" }
railspan-server = { path = "crates/railspan-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
bytes = "1"
