[package]
name = "railspan-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Railspan ingest agent: receive, sample, forward spans"

[dependencies]
railspan-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
