[package]
name = "railspan-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Railspan storage, query API, and UI"

[dependencies]
railspan-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
tempfile = "3"
